# research-cryptanalysis_aes

./: ..gitignore.un~  .gitignore  dataset.py  model.py  params_0.txt  plot_loss.py  plot_metrics.py  pyproject.toml  requirements.txt  start_venv.sh  train.py  train.sh  training_log.txt  training_log_params_0.txt  utils.py
data/: 128-byte-tokens.pkl  128-bytes-rand-iv-tokens.pkl  128-bytes-tokens.pkl  192-byte-tokens.pkl  192-bytes-rand-iv-tokens.pkl  256-byte-tokens.pkl  256-bytes-rand-iv-tokens.pkl  englishSentences-tokens.pkl  englishSentences.csv
data/encrypted/: 128-bytes-rand-iv.csv  128-bytes.csv  192-bytes-rand-iv.csv  192-bytes.csv  256-bytes-rand-iv.csv  256-bytes.csv
data/keys/: 128-bytes.hex  128-bytes.hex.iv  192-bytes.hex  192-bytes.hex.iv  256-bytes.hex  256-bytes.hex.iv
methods/: gru.py  lstm.py  regularization.py  rnn.py
scripts/: .encrypt.sh.un~  .generate_key.sh.un~  __mini_aes.py  check_progress.sh  clean_up_slurm_outputs.sh  encrypt.sh  encrypt_data.py  encrypt_data_test.py  generate_key.sh  generate_mini_aes_data.py  get_wiki_data.py  mini_aes.py  tokenize.py  tokenize_data.py  tokenize_plain_text_data.py  utils.py
