[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "Flat-layout Python project"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["scripts", "methods"]

# Optional but recommended for tests
[tool.pytest.ini_options]
pythonpath = ["."]