[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "Flat-layout Python project"
requires-python = ">=3.9"
dependencies = [
    # Core scientific stack
    "numpy>=2.1",
    "pandas>=2.2",
    "sympy>=1.13",
    "mpmath>=1.3",
    "networkx>=3.3",

    # Machine learning
    "torch>=2.3",
    "torchvision>=0.18",
    "torchmetrics>=1.4",
    "lightning-utilities>=0.11",

    # Data / HuggingFace
    "datasets>=2.20",
    "huggingface_hub>=0.23",
    "pyarrow>=15",
    "xxhash>=3.4",
    "dill>=0.3",
    "multiprocess>=0.70",
    "fsspec>=2024.3",
    "filelock>=3.13",
    "tqdm>=4.66",

    # Visualization
    "matplotlib>=3.9",
    "pillow>=10.4",

    # Networking / CLI / config
    "requests>=2.31",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "click>=8.1",
    "typer-slim>=0.12",
    "shellingham>=1.5",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[tool.setuptools]
packages = ["scripts", "methods"]

# Optional but recommended for tests
[tool.pytest.ini_options]
pythonpath = ["."]